--- a/solution/FunctionApp/FunctionApp.csproj
+++ b/solution/FunctionApp/FunctionApp.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AzureFunctionsVersion>v3</AzureFunctionsVersion>
+    <UserSecretsId>3956e7aa-4d13-430a-bb5f-a5f8f5a450ee</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="SqlTemplates\InsertActivityAudit.sql" />
@@ -28,6 +29,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.5" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.7" />
     <PackageReference Include="Microsoft.Azure.Management.Compute.Fluent" Version="1.34.0" />
@@ -38,6 +40,7 @@
     <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="5.2.7" />
     <PackageReference Include="NJsonSchema" Version="10.1.26" />
     <PackageReference Include="SendGrid" Version="9.21.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
 
 
