--- a/solution/WebApplication/WebApplication.Tests/WebApplication.Tests.csproj
+++ b/solution/WebApplication/WebApplication.Tests/WebApplication.Tests.csproj
@@ -14,7 +14,7 @@
     <Content Include="appsettings.json">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 
