--- a/solution/WebApplication/WebApplication/appsettings.json
+++ b/solution/WebApplication/WebApplication/appsettings.json
@@ -22,51 +22,94 @@
         "CallbackPath": "/signin-oidc",
         "SignedOutCallbackPath ": "/signout-callback-oidc"
     },
+    "ApplicationInsights": {
+        "ConnectionString": ""
+    },
     "SecurityModelOptions": {
-        "SecurityRoles": [],
-        "GlobalAllowActions": [
-            "ADFActivityErrors",
-            "ADFPipelineStats",
-            "AFExecutionSummary",
-            "AFLogMonitor",
-            "Dashboard",
-            "DataFactory",
-            "FrameworkTaskRunner",
-            "FrameworkTaskRunnerDapper",
-            "ReportsAndStatistics",
-            "ScheduleInstance",
-            "ScheduleMaster",
-            "SourceAndTargetSystems",
-            "SourceAndTargetSystemsJsonSchema",
-            "SubjectArea",
-            "TaskGroup",
-            "TaskGroupDependency",
-            "TaskInstance",
-            "TaskInstanceExecution",
-            "TaskMaster",
-            "TaskMasterWaterMark",
-            "TaskType",
-            "TaskTypeMapping",
-            "Wizards"
-
+        "SecurityRoles": {
+            "Administrators": {
+                "SecurityGroupId": "",
+                "AllowActions": [
+                    "*"
+                ]
+            },
+            "DataAdministrator": {
+                "SecurityGroupId": "",
+                "AllowActions": [
+                    "*._Reader"
+                ]
+            },
+            "Reader": {
+                "IsSubjectAreaScoped": true,
+                "AllowActions": [
+                    "SubjectArea._Reader",
+                    "SubjectAreaForm._Reader"
+                ]
+            },
+            "SubjectAreaAnalyst": {
+                "IsSubjectAreaScoped": true,
+                "AllowActions": [
+                    "ScheduleMaster._Reader",
+                    "ScheduleInstance._Reader",
+                    "SubjectArea._Reader",
+                    "SubjectAreaForm._Reader",
+                    "TaskGroup._Reader",
+                    "TaskGroupDependency._Reader",
+                    "TaskInstance._Reader",
+                    "TaskInstance.UpdateTaskInstanceStatus",
+                    "TaskInstanceExecution._Reader",
+                    "TaskMaster._Reader",
+                    "TaskMasterWaterMark._Reader",
+                    "TaskMaster.UpdateTaskMasterActiveYN",
+                    "Wizards.PIAWizard*"
+                ]
+            },
+            "PipelineAdministrator": {
+                "IsSubjectAreaScoped": true,
+                "AllowActions": [
+                    "ScheduleMaster._Reader",
+                    "ScheduleMaster._Writer",
+                    "ScheduleInstance._Reader",
+                    "ScheduleInstance._Writer",
+                    "SubjectArea._Reader",
+                    "SubjectAreaForm._Reader",
+                    "TaskGroup._Reader",
+                    "TaskGroupDependency._Reader",
+                    "TaskInstance._Reader",
+                    "TaskInstance._Writer",
+                    "TaskInstance.UpdateTaskInstanceStatus",
+                    "TaskInstanceExecution._Reader",
+                    "TaskMaster._Reader",
+                    "TaskMaster._Writer",
+                    "TaskMaster.UpdateTaskMasterActiveYN",
+                    "TaskMasterWaterMark._Reader"
+                ]
+            }
+        },
+        "ReaderActions": [
+            //note - scaffolded Index action is unused on most pages
+            "IndexDataTable",
+            "Get*",
+            "Details"
         ],
+        "WriterActions": [
+            "Copy*",
+            "Update*",
+            "Create*",
+            "Edit*",
+            "Delete*"
+        ],
+        "GlobalAllowActions": [
+            "Dashboard",
+            "Home.Error",
+            "Home.AccessDenied",
+            "TaskType._Reader",
+            "TaskTypeMapping._Reader",
+            "Wizards.ExternalFileUpload"
+        ],
+        //Deny globally - cannot be overidden
         "GlobalDenyActions": [
-            "Customisations.Delete",
-            "DataFactory.Delete",
-            "FrameworkTaskRunner.Delete",
-            "FrameworkTaskRunnerDapper.Delete",
-            "ScheduleInstance.Delete",
-            "ScheduleMaster.Delete",
-            "SourceAndTargetSystems.Delete",
-            "SourceAndTargetSystemsJsonSchema.Delete",
-            "TaskGroup.Delete",
-            "TaskGroupDependency.Delete",
-            "TaskGroupDependency.DeletePlus",
-            "TaskInstance.Delete",
-            "TaskMaster.Delete",
-            "TaskMasterWaterMark.Delete",
-            "TaskType.Delete",
-            "TaskTypeMapping.Delete"
+            "*.Delete"
         ]
     }
 }
