--- a/solution/WebApplication/WebApplication/appsettings.Development.json
+++ b/solution/WebApplication/WebApplication/appsettings.Development.json
@@ -1,26 +1,29 @@
 {
-    "AZURE_TENANT_ID": "##GUID_HERE##",
-    "AZURE_CLIENT_ID": "##GUID_HERE##",
+    "AZURE_TENANT_ID": "5e971dec-6d4f-43f0-a533-d9eb58a3e219",
+    "AZURE_CLIENT_ID": "b32994fb-ba49-482b-99e9-1c86bcb1aa63",
     "AZURE_CLIENT_SECRET": "DO_NOT_SET_THIS_USE_DOTNET_SECRET",
     "AppInsightsWorkspaceId": "####################",
-    "AdsGoFastTaskMetaDataDatabaseName": "databasename",
-    "AdsGoFastTaskMetaDataDatabaseServer": "databaseserver.database.windows.net",
+    "AdsGoFastTaskMetaDataDatabaseName": "AdsGoFastv1.0",
+    "AdsGoFastTaskMetaDataDatabaseServer": "adsgofast-srv-5dm47e572rvu4.database.windows.net",
+    "SecurityModelOptions": {
+        "SecurityRoles": {
+            "Users": {
+                "SecurityGroupId": "199e3a51-30a7-467f-bbb3-33f1075136e5"
+            },
+            "Administrators": {
+                "SecurityGroupId": "199e3a51-30a7-467f-bbb3-33f1075136e5"
+            },
+            "DataAdministrators": {
+                "SecurityGroupId": "199e3a51-30a7-467f-bbb3-33f1075136e5"
+            }
+        }
+    },
     "AzureAd": {
         "Instance": "https://login.microsoftonline.com/",
-        "Domain": "contoso.com",
-        "TenantId": "",
-        "ClientId": "",
+        "Domain": "satalyst.com",
+        "TenantId": "5e971dec-6d4f-43f0-a533-d9eb58a3e219",
+        "ClientId": "b32994fb-ba49-482b-99e9-1c86bcb1aa63",
         "CallbackPath": "/signin-oidc",
         "SignedOutCallbackPath ": "/signout-callback-oidc"
-    },
-    "SecurityModelOptions": {
-        "SecurityRoles": [
-            {
-                "SecurityGroupId": "###GUID_HERE###",
-                "Name": "Administrators",
-                "AllowActions": [
-                ]
-            }
-        ]
     }
 }
