Consolidated auth config and fixed http client dependencies

--- a/solution/WebApplication/WebApplication/appsettings.Development.json
+++ b/solution/WebApplication/WebApplication/appsettings.Development.json
@@ -1,29 +1,33 @@
 {
-    "AZURE_TENANT_ID": "5e971dec-6d4f-43f0-a533-d9eb58a3e219",
-    "AZURE_CLIENT_ID": "b32994fb-ba49-482b-99e9-1c86bcb1aa63",
-    "AZURE_CLIENT_SECRET": "DO_NOT_SET_THIS_USE_DOTNET_SECRET",
-    "AppInsightsWorkspaceId": "####################",
-    "AdsGoFastTaskMetaDataDatabaseName": "AdsGoFastv1.0",
-    "AdsGoFastTaskMetaDataDatabaseServer": "adsgofast-srv-5dm47e572rvu4.database.windows.net",
-    "SecurityModelOptions": {
-        "SecurityRoles": {
-            "Users": {
-                "SecurityGroupId": "199e3a51-30a7-467f-bbb3-33f1075136e5"
-            },
-            "Administrators": {
-                "SecurityGroupId": "199e3a51-30a7-467f-bbb3-33f1075136e5"
-            },
-            "DataAdministrators": {
-                "SecurityGroupId": "199e3a51-30a7-467f-bbb3-33f1075136e5"
-            }
-        }
-    },
-    "AzureAd": {
-        "Instance": "https://login.microsoftonline.com/",
-        "Domain": "satalyst.com",
-        "TenantId": "5e971dec-6d4f-43f0-a533-d9eb58a3e219",
-        "ClientId": "b32994fb-ba49-482b-99e9-1c86bcb1aa63",
-        "CallbackPath": "/signin-oidc",
-        "SignedOutCallbackPath ": "/signout-callback-oidc"
+  "ApplicationOptions": {
+    "UseMSI": false,
+    "AdsGoFastTaskMetaDataDatabaseName": "databasename",
+    "AdsGoFastTaskMetaDataDatabaseServer": "databaseserver.database.windows.net",
+    "AppInsightsWorkspaceId": "##APPLICATION_INSIGHTS_GUID_HERE##"
+  },
+  "SecurityModelOptions": {
+    "SecurityRoles": {
+      "Users": {
+        "SecurityGroupId": "##AZURE_AD_SECURITY_GROUP_GUID_HERE##"
+      },
+      "Administrators": {
+        "SecurityGroupId": "##AZURE_AD_SECURITY_GROUP_GUID_HERE##"
+      },
+      "DataAdministrators": {
+        "SecurityGroupId": "##AZURE_AD_SECURITY_GROUP_GUID_HERE##"
+      }
     }
+  },
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "contoso.com",
+    "TenantId": "##GUID_HERE##",
+    "ClientId": "##GUID_HERE##",
+    "ClientSecret": "DO_NOT_SET_THIS_USE_DOTNET_SECRET",
+    "CallbackPath": "/signin-oidc",
+    "SignedOutCallbackPath ": "/signout-callback-oidc"
+  },
+  "ApplicationInsights": {
+    "ConnectionString": "##APPLICATION_INSIGHTS_CONNECTIONSTRING_HERE##"
+  }
 }
