--- a/solution/WebApplication/WebApplication/appsettings.json
+++ b/solution/WebApplication/WebApplication/appsettings.json
@@ -1,115 +1,115 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft": "Warning",
-            "Microsoft.Hosting.Lifetime": "Information"
-        }
-    },
-    "AZURE_TENANT_ID": "",
-    "AZURE_CLIENT_ID": "",
-    "AZURE_CLIENT_SECRET": "",
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "ApplicationOptions": {
     "UseMSI": false,
     "AdsGoFastTaskMetaDataDatabaseName": "",
     "AdsGoFastTaskMetaDataDatabaseServer": "",
-    "AppInsightsWorkspaceId": "",
-    "AllowedHosts": "*",
-    "AzureAd": {
-        "Instance": "https://login.microsoftonline.com/",
-        "Domain": "",
-        "TenantId": "",
-        "ClientId": "",
-        "CallbackPath": "/signin-oidc",
-        "SignedOutCallbackPath ": "/signout-callback-oidc"
-    },
-    "ApplicationInsights": {
-        "ConnectionString": ""
-    },
-    "SecurityModelOptions": {
-        "SecurityRoles": {
-            "Administrators": {
-                "SecurityGroupId": "",
-                "AllowActions": [
-                    "*"
-                ]
-            },
-            "DataAdministrator": {
-                "SecurityGroupId": "",
-                "AllowActions": [
-                    "*._Reader"
-                ]
-            },
-            "Reader": {
-                "IsSubjectAreaScoped": true,
-                "AllowActions": [
-                    "SubjectArea._Reader",
-                    "SubjectAreaForm._Reader"
-                ]
-            },
-            "SubjectAreaAnalyst": {
-                "IsSubjectAreaScoped": true,
-                "AllowActions": [
-                    "ScheduleMaster._Reader",
-                    "ScheduleInstance._Reader",
-                    "SubjectArea._Reader",
-                    "SubjectAreaForm._Reader",
-                    "TaskGroup._Reader",
-                    "TaskGroupDependency._Reader",
-                    "TaskInstance._Reader",
-                    "TaskInstance.UpdateTaskInstanceStatus",
-                    "TaskInstanceExecution._Reader",
-                    "TaskMaster._Reader",
-                    "TaskMasterWaterMark._Reader",
-                    "TaskMaster.UpdateTaskMasterActiveYN",
-                    "Wizards.PIAWizard*"
-                ]
-            },
-            "PipelineAdministrator": {
-                "IsSubjectAreaScoped": true,
-                "AllowActions": [
-                    "ScheduleMaster._Reader",
-                    "ScheduleMaster._Writer",
-                    "ScheduleInstance._Reader",
-                    "ScheduleInstance._Writer",
-                    "SubjectArea._Reader",
-                    "SubjectAreaForm._Reader",
-                    "TaskGroup._Reader",
-                    "TaskGroupDependency._Reader",
-                    "TaskInstance._Reader",
-                    "TaskInstance._Writer",
-                    "TaskInstance.UpdateTaskInstanceStatus",
-                    "TaskInstanceExecution._Reader",
-                    "TaskMaster._Reader",
-                    "TaskMaster._Writer",
-                    "TaskMaster.UpdateTaskMasterActiveYN",
-                    "TaskMasterWaterMark._Reader"
-                ]
-            }
-        },
-        "ReaderActions": [
-            //note - scaffolded Index action is unused on most pages
-            "IndexDataTable",
-            "Get*",
-            "Details"
-        ],
-        "WriterActions": [
-            "Copy*",
-            "Update*",
-            "Create*",
-            "Edit*",
-            "Delete*"
-        ],
-        "GlobalAllowActions": [
-            "Dashboard",
-            "Home.Error",
-            "Home.AccessDenied",
-            "TaskType._Reader",
-            "TaskTypeMapping._Reader",
-            "Wizards.ExternalFileUpload"
-        ],
-        //Deny globally - cannot be overidden
-        "GlobalDenyActions": [
-            "*.Delete"
+    "AppInsightsWorkspaceId": ""
+  },
+  "AllowedHosts": "*",
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "",
+    "TenantId": "",
+    "ClientId": "",
+    "ClientSecret": "",
+    "CallbackPath": "/signin-oidc",
+    "SignedOutCallbackPath ": "/signout-callback-oidc"
+  },
+  "ApplicationInsights": {
+    "ConnectionString": ""
+  },
+  "SecurityModelOptions": {
+    "SecurityRoles": {
+      "Administrators": {
+        "SecurityGroupId": "",
+        "AllowActions": [
+          "*"
         ]
-    }
+      },
+      "DataAdministrator": {
+        "SecurityGroupId": "",
+        "AllowActions": [
+          "*._Reader"
+        ]
+      },
+      "Reader": {
+        "IsSubjectAreaScoped": true,
+        "AllowActions": [
+          "SubjectArea._Reader",
+          "SubjectAreaForm._Reader"
+        ]
+      },
+      "SubjectAreaAnalyst": {
+        "IsSubjectAreaScoped": true,
+        "AllowActions": [
+          "ScheduleMaster._Reader",
+          "ScheduleInstance._Reader",
+          "SubjectArea._Reader",
+          "SubjectAreaForm._Reader",
+          "TaskGroup._Reader",
+          "TaskGroupDependency._Reader",
+          "TaskInstance._Reader",
+          "TaskInstance.UpdateTaskInstanceStatus",
+          "TaskInstanceExecution._Reader",
+          "TaskMaster._Reader",
+          "TaskMasterWaterMark._Reader",
+          "TaskMaster.UpdateTaskMasterActiveYN",
+          "Wizards.PIAWizard*"
+        ]
+      },
+      "PipelineAdministrator": {
+        "IsSubjectAreaScoped": true,
+        "AllowActions": [
+          "ScheduleMaster._Reader",
+          "ScheduleMaster._Writer",
+          "ScheduleInstance._Reader",
+          "ScheduleInstance._Writer",
+          "SubjectArea._Reader",
+          "SubjectAreaForm._Reader",
+          "TaskGroup._Reader",
+          "TaskGroupDependency._Reader",
+          "TaskInstance._Reader",
+          "TaskInstance._Writer",
+          "TaskInstance.UpdateTaskInstanceStatus",
+          "TaskInstanceExecution._Reader",
+          "TaskMaster._Reader",
+          "TaskMaster._Writer",
+          "TaskMaster.UpdateTaskMasterActiveYN",
+          "TaskMasterWaterMark._Reader"
+        ]
+      }
+    },
+    "ReaderActions": [
+      //note - scaffolded Index action is unused on most pages
+      "IndexDataTable",
+      "Get*",
+      "Details"
+    ],
+    "WriterActions": [
+      "Copy*",
+      "Update*",
+      "Create*",
+      "Edit*",
+      "Delete*"
+    ],
+    "GlobalAllowActions": [
+      "Dashboard",
+      "Home.Error",
+      "Home.AccessDenied",
+      "TaskType._Reader",
+      "TaskTypeMapping._Reader",
+      "Wizards.ExternalFileUpload"
+    ],
+    //Deny globally - cannot be overidden
+    "GlobalDenyActions": [
+      "*.Delete"
+    ]
+  }
 }
