Fixed minor front end issues
Fixed minor front end issues

--- a/solution/WebApplication/WebApplication/WebApplication.csproj
+++ b/solution/WebApplication/WebApplication/WebApplication.csproj
@@ -49,7 +49,7 @@
 
   <ItemGroup>
     <Folder Include="Controllers\Enums\" />
-    <Folder Include="wwwroot\lib\bswindow\" />
+    <Folder Include="wwwroot\js\bswindow\" />
     <Folder Include="wwwroot\fonts\" />
   </ItemGroup>
 
