Minor updates to readme and app settings template

--- a/solution/WebApplication/WebApplication/appsettings.json
+++ b/solution/WebApplication/WebApplication/appsettings.json
@@ -13,12 +13,22 @@
     "AppInsightsWorkspaceId": ""
   },
   "AllowedHosts": "*",
+  //Azure Ad credentials are used by all downstream service connections by application, you should remove the Client Secret and use MSI for production deployments. 
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
     "Domain": "",
     "TenantId": "",
     "ClientId": "",
     "ClientSecret": "",
+    "CallbackPath": "/signin-oidc",
+    "SignedOutCallbackPath ": "/signout-callback-oidc"
+  },
+  //Azure Ad Auth Object used ONLY to authenticate user. This is NOT used for downstream service connections by application. 
+  "AzureAdAuth": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "",
+    "TenantId": "",
+    "ClientId": "",
     "CallbackPath": "/signin-oidc",
     "SignedOutCallbackPath ": "/signout-callback-oidc"
   },
