Started to update deployment to allow component by component deployment... note not yet finished

--- a/.gitignore
+++ b/.gitignore
@@ -276,8 +276,5 @@ __pycache__/
 *.pyc
 
 #Old Deploy Folder 
-<<<<<<< HEAD
 Deploy/
-=======
-Deploy/
->>>>>>> 65ec745264b49defe0a18e184eca32eb4a7ff5cf
+deploy/
