--- a/solution/FunctionApp/FunctionApp.csproj
+++ b/solution/FunctionApp/FunctionApp.csproj
@@ -1,15 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AzureFunctionsVersion>v3</AzureFunctionsVersion>
-    <UserSecretsId>3956e7aa-4d13-430a-bb5f-a5f8f5a450ee</UserSecretsId>
+    <!--<UserSecretsId>3956e7aa-4d13-430a-bb5f-a5f8f5a450ee</UserSecretsId>-->
   </PropertyGroup>
   <ItemGroup>
     <None Remove="SqlTemplates\InsertActivityAudit.sql" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Azure.Core" Version="1.4.1" />
-    <PackageReference Include="Azure.Identity" Version="1.2.2" />
+    <PackageReference Include="Azure.Core" Version="1.13.0" />
+    <PackageReference Include="Azure.Identity" Version="1.3.0" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.5.1" />
     <PackageReference Include="Azure.Storage.Blobs.ChangeFeed" Version="12.0.0-preview.4" />
     <PackageReference Include="Azure.Storage.Common" Version="12.5.2" />
@@ -17,9 +17,10 @@
     <PackageReference Include="Dapper" Version="2.0.35" />
     <PackageReference Include="FormatWith" Version="2.2.1" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
-    <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.0.0" />
+    <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
     <PackageReference Include="Microsoft.Azure.Management.DataFactory" Version="4.9.0" />
-    <PackageReference Include="Microsoft.Azure.WebJobs" Version="3.0.16" />
+    <PackageReference Include="Microsoft.Azure.Services.AppAuthentication" Version="1.6.1" />
+    <PackageReference Include="Microsoft.Azure.WebJobs" Version="3.0.27" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Http" Version="3.0.2" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.0.0">
       <PrivateAssets>all</PrivateAssets>
@@ -31,12 +32,12 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.5" />
+    <PackageReference Include="Microsoft.Identity.Web" Version="1.9.1" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.7" />
     <PackageReference Include="Microsoft.Azure.Management.Compute.Fluent" Version="1.34.0" />
     <PackageReference Include="Microsoft.Azure.Management.Fluent" Version="1.34.0" />
     <PackageReference Include="Microsoft.Azure.Management.ResourceManager.Fluent" Version="1.34.0" />
     <PackageReference Include="Microsoft.Azure.Management.Sql.Fluent" Version="1.34.0" />
-    <PackageReference Include="Microsoft.Azure.Services.AppAuthentication" Version="1.5.0" />
     <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="5.2.7" />
     <PackageReference Include="NJsonSchema" Version="10.1.26" />
     <PackageReference Include="SendGrid" Version="9.21.0" />
