--- a/solution/FunctionApp/FunctionApp.csproj
+++ b/solution/FunctionApp/FunctionApp.csproj
@@ -41,6 +41,7 @@
     <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="5.2.7" />
     <PackageReference Include="NJsonSchema" Version="10.1.26" />
     <PackageReference Include="SendGrid" Version="9.21.0" />
+    <PackageReference Include="System.Collections" Version="4.3.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
 
