Added AppSettings to startup to allow structured settings files.

--- a/solution/FunctionApp/FunctionApp.csproj
+++ b/solution/FunctionApp/FunctionApp.csproj
@@ -48,6 +48,9 @@
 
   </ItemGroup>
   <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -128,5 +131,4 @@
     <Folder Include="Code Templates\" />
     <Folder Include="TODO\" />
   </ItemGroup>
-
 </Project>
