--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,7 +18,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - working-directory: /solution/FunctionApp
     - uses: actions/checkout@v2
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
@@ -26,5 +25,7 @@ jobs:
         dotnet-version: ${{ env.DOTNET_VERSION }}
     - name: Restore dependencies
       run: dotnet restore
+      working-directory: /solution/FunctionApp
     - name: Build
       run: dotnet build --no-restore
+      working-directory: /solution/FunctionApp
