--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -2,9 +2,9 @@ name: Build Source Artifacts
 
 on:
   push:
-    branches: [ development/0.1) ]
+    branches: [ development/0.1 ]
   pull_request:
-    branches: [ development/0.1) ]
+    branches: [ development/0.1 ]
 
 
 env:
