--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -7,11 +7,14 @@ env:
   AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
   DOTNET_VERSION: '3.1.x'           # set this to the dot net version to use
 
+defaults:
+  run:
+    working-directory: ./solution/FunctionApp
+
 jobs:
   build:
 
     runs-on: ubuntu-latest
-
     steps:
     - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
     - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
@@ -34,4 +37,3 @@ jobs:
       working-directory: /solution/FunctionApp
     - name: Build
       run: dotnet build --no-restore
-      working-directory: /solution/FunctionApp
