--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,10 +32,10 @@ jobs:
       run: dotnet restore 
       working-directory: ./solution/FunctionApp
     - name: Publish functions
-      run: dotnet publish --no-restore --configuration Release --output ${{ env.OUTPUT_PATH }}
+      run: dotnet publish --no-restore --configuration Release --output './deploy/azurefunction'
       working-directory: ./solution/FunctionApp
     - name: Package functions
       uses: actions/upload-artifact@v2.2.3
       with:
           name: functions
-          path: ${{ env.OUTPUT_PATH }}
+          path: ./deploy/azurefunction
