--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -35,7 +35,7 @@ jobs:
       run: dotnet publish --no-restore --configuration Release --output './deploy'
       working-directory: ./solution/FunctionApp
     - run: echo "starting Zip"
-    - run: zip -r ./deploy/functionapp/Publish.zip
+    - run: zip -r './deploy/functionapp/Publish.zip' './solution/FunctionApp/deploy'
     - name: Package functions
       uses: actions/upload-artifact@v2.2.3
       with:
