--- a/.github/workflows/Build_Development.yml
+++ b/.github/workflows/Build_Development.yml
@@ -6,6 +6,8 @@ on:
       - development/0.1
 
 env:
+  TOGGLE_BUILD_FUNCTIONS: false,
+  TOGGLE_BUILD_WEBAPP: false,
   AZURE_WEBAPP_NAME: my-app-name    # set this to your application's name
   AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
   DOTNET_VERSION: '3.1.x'           # set this to the dot net version to use
@@ -34,16 +36,20 @@ jobs:
         
     #Azure Function App Build
     - name: Restore dependencies for Function App
+      if: $ {{env.TOGGLE_BUILD_FUNCTIONS==true}} 
       run: dotnet restore 
       working-directory: ./solution/FunctionApp
     - name: Publish functions
+      if: $ {{env.TOGGLE_BUILD_FUNCTIONS==true}}
       run: dotnet publish --no-restore --configuration Release --output './deploy'
       working-directory: ./solution/FunctionApp
     - run: echo "starting Zip"
     - name: zip functions
+      if: $ {{env.TOGGLE_BUILD_FUNCTIONS==true}}
       run: zip -r ../publish.zip * 
       working-directory: ./solution/FunctionApp/deploy
     - name: Package functions
+      if: $ {{env.TOGGLE_BUILD_FUNCTIONS==true}}
       uses: actions/upload-artifact@v2.2.3
       with:
           name: Azure Functions Package
@@ -51,16 +57,20 @@ jobs:
           
     #Web App Build
     - name: Restore dependencies for Web App
+      if: $ {{env.TOGGLE_BUILD_WEBAPP==true}}
       run: dotnet restore
       working-directory: ./solution/WebApplication
     - name: Publish Web App
+      if: $ {{env.TOGGLE_BUILD_WEBAPP==true}}
       run: dotnet publish --no-restore --configuration Release --output './deploy'
       working-directory: ./solution/WebApplication
     - run: echo "starting Zip"
     - name: zip web app
+      if: $ {{env.TOGGLE_BUILD_WEBAPP==true}}
       run: zip -r ../publish.zip * 
       working-directory: ./solution/WebApplication/deploy
     - name: Package Web App
+      if: $ {{env.TOGGLE_BUILD_WEBAPP==true}}
       uses: actions/upload-artifact@v2.2.3
       with:
           name: Web App Package
