--- a/.github/workflows/Build_Development.yml
+++ b/.github/workflows/Build_Development.yml
@@ -15,7 +15,7 @@ env:
 
 jobs:
   build:
-
+    if: ${{env.TOGGLE_BUILD_FUNCTIONS==true}} 
     runs-on: ubuntu-latest
     steps:
     - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
