--- a/.github/workflows/Build_Development.yml
+++ b/.github/workflows/Build_Development.yml
@@ -15,7 +15,6 @@ env:
 
 jobs:
   build:
-    if: ${{env.TOGGLE_BUILD_FUNCTIONS==true}} 
     runs-on: ubuntu-latest
     steps:
     - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
@@ -25,16 +24,19 @@ jobs:
       uses: actions/checkout@v2
     - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
     - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-    - name: List files in the repository
-      run: |
-        ls ${{ github.workspace }}
     - run: echo "🍏 This job's status is ${{ job.status }}."
     - uses: actions/checkout@v2
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: ${{ env.DOTNET_VERSION }}
-        
+    
+    #Load AdsGoFast Environment Variables
+    - name: lj
+      shell: pwsh
+      run: .PushEnvFileIntoVariables.ps1
+      working-directory: ./solution/Deployment
+    
     #Azure Function App Build
     - name: Restore dependencies for Function App
       if: ${{env.TOGGLE_BUILD_FUNCTIONS==true}} 
