--- a/.github/workflows/Build_Development.yml
+++ b/.github/workflows/Build_Development.yml
@@ -37,7 +37,7 @@ jobs:
       shell: pwsh
       run: |
         . .\PushEnvFileIntoVariables.ps1
-        ParseEnvFile("$ENVIRONMENT_NAME")
+        ParseEnvFile("$env:ENVIRONMENT_NAME")
       working-directory: ./solution/Deployment
       
     - name: test env variable 0
