Added Azure Function Deployment

--- a/solution/Database/ADSGoFastDbUp/AdsGoFastDbUp/AdsGoFastDbUp.csproj
+++ b/solution/Database/ADSGoFastDbUp/AdsGoFastDbUp/AdsGoFastDbUp.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="0-1-0-beta\A-Journaled\008-SampleTasks_SourceAndTargetSystems.sql" />
     <None Remove="0-1-0-beta\B-Always\001-Schemas.sql" />
     <None Remove="0-1-0-beta\B-Always\002-Tables.sql" />
     <None Remove="0-1-0-beta\B-Always\003-StoredProcsEtc.sql" />
@@ -23,6 +24,7 @@
     <EmbeddedResource Include="0-1-0-beta\A-Journaled\005-SampleTasks_Base.sql" />
     <EmbeddedResource Include="0-1-0-beta\A-Journaled\006-SampleTasks_TaskMaster.sql" />
     <EmbeddedResource Include="0-1-0-beta\A-Journaled\007-SampleTasks_TaskMasterWaterMark.sql" />
+    <EmbeddedResource Include="0-1-0-beta\A-Journaled\008-SampleTasks_SourceAndTargetSystems.sql" />
   </ItemGroup>
 
   <ItemGroup>
