--- a/solution/FunctionApp/appsettings.json
+++ b/solution/FunctionApp/appsettings.json
@@ -1,3 +1,77 @@
 {
-  //Populated for deployment only
+
+  "FUNCTIONS_WORKER_RUNTIME": "dotnet",
+  "AZURE_TENANT_ID": "#################",
+  "TenantId": "#################",
+  "AZURE_CLIENT_ID": "#################",
+  "ApplicationId": "#################",
+  "AZURE_CLIENT_SECRET": "#################",
+  "AuthenticationKey": "#################",
+  "GetSASUriSendEmailHttpTriggerAzureFunctionKey": "NA",
+  "AZStorageCacheFileListHttpTriggerAzureFunctionKey": "NA",
+  "SENDGRID_APIKEY": "#################",
+  "DefaultSentFromEmailAddress": "#################",
+  "DefaultSentFromEmailName": "Ads Go Fast (No Reply)",
+  //Azure Ad Element contains details of the Application Registration that is used by the functions to access downstream azure resources directly. This is used in conjunction with the Application Option "UseMSI".If use MSI is true then the client secret and Client Id can be left blank.
+  "AzureAdAzureServicesDirect": {
+    "Audience": "", //Not used for direct connections
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "microsoft.com",
+    "Tenant": "microsoft.onmicrosoft.com",
+    "TenantId": "#################",
+    "ClientId": "#################",
+    "ClientSecret": "#################",
+    "CallbackPath": "/signin-oidc",
+    "SignedOutCallbackPath ": "/signout-callback-oidc"
+  },
+  //Azure Ad Element contains details of the Application Registration that is used by the functions to access downstream azure resources via an App Registration (eg. Chained Function calls). This is used in conjunction with the Application Option "UseMSI".If use MSI is true then the client secret element can be left blank
+  "AzureAdAzureServicesViaAppReg": {
+    "Audience": "api://#################",
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "microsoft.com",
+    "Tenant": "microsoft.onmicrosoft.com",
+    "TenantId": "#################",
+    "ClientId": "#################",
+    "ClientSecret": "#################",
+    "CallbackPath": "/signin-oidc",
+    "SignedOutCallbackPath ": "/signout-callback-oidc"
+  },
+  "ApplicationOptions": {
+    "UseMSI": false,
+    "FrameworkWideMaxConcurrency": 400,
+    //Options that allow the enabling and disabling of the timer based triggers
+    "TimerTriggers": {
+      "EnablePrepareFrameworkTasks": true,
+      "EnableRunFrameworkTasks": true,
+      "EnableGetADFStats": true,
+      "EnableGetActivityLevelLogs": true
+    },
+    //Relative Paths for various directories.. should not need to be changed.
+    "LocalPaths": {
+      "SQLTemplateLocation": ".\\SqlTemplates\\",
+      "KQLTemplateLocation": ".\\KqlTemplates\\",
+      "HTMLTemplateLocation": ".\\HTMLEmailTemplates\\"
+    },
+    //Options relating to testing activities
+    "TestingOptions": {
+      "TaskObjectTestFileLocation": "#################",
+      "GenerateTaskObjectTestFiles": false,
+      "TaskMetaDataStorageAccount": "#################",
+      "TaskMetaDataStorageContainer": "#################",
+      "TaskMetaDataStorageFolder": ""
+    },
+    "ServiceConnections": {
+      //AppInsights Connection to retrieve Azure Functions Log Messages
+      "AppInsightsWorkspaceId": "#################",
+      "AppInsightsMaxNumberOfDaysToRequest": "1",
+      "AppInsightsMinutesOverlap": "5",
+      //Core Orchestration Function Connection Details for chained function calls
+      "CoreFunctionsURL": "http://localhost:7071",
+      "CoreFunctionsAllowedRoles": [ "FunctionAPICaller" ],
+      //AdsGoFast metadata database connection details.. Section not in use yet TBD
+      "AdsGoFastTaskMetaDataDatabaseServer": "#################.database.windows.net",
+      "AdsGoFastTaskMetaDataDatabaseName": "#################",
+      "AdsGoFastTaskMetaDataDatabaseUseTrustedConnection": false
+    }
+  }
 }
